fix: align colour scheme

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -61,6 +61,12 @@
     z-index: 1021;
 }
 
+#scroll-to-top {
+    &:focus {
+        box-shadow: 0 0 0 .15rem #3a1e3e;
+    }
+}
+
 ::selection {
     background: #fff6cc;
     color: black;
@@ -250,6 +256,15 @@ a {
     flex-wrap: nowrap;
     align-items: center;
   }
+
+.form-select {
+    border-color: #3a1e3e;
+    &:focus {
+        border-color: #3a1e3e;
+        outline: 0;
+        box-shadow:inset 0 0 0 .10rem #3a1e3e;
+    }
+}
 
 /* Toggle Collection View for Small Screens */
 
